test_suite/alan-2022-examples/failing/000530_mutation.alan
source O begin >= boolean S; relax end
